# ML_project

./: README.md  incorrect_predictions.csv  pyproject.toml  requirements.txt  survived.ipynb
