[tool.poetry]
name = "titanic-"
version = "0.1.0"
description = "Lecture 1083 Machine Learning Project"
authors = ["Min Seo Lee"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
